--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
     <title>Swagger UI</title>
     <link rel="stylesheet" type="text/css" href="dist/swagger-ui.css" />
